2016-09-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (params_append_mhd): Add comments.

2016-09-23  Christian Fischer <christian.fischer@greenbone.net>

	* src/html/classic/omp.xsl (preference [edit-details]): Use yes/no
	radio buttons for preference "report_host_details".

2016-09-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (preference [edit-details]): Use yes/no
	radio buttons for preference "unscanned_closed_udp" by replacing
	a duplicate "unscanned_closed" entry accordingly.

2016-09-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/greenbone.js (start_auto_refresh)
	(stop_auto_refresh): Replace conditions for keeping the auto-refresh
	stopped with a counter.

2016-09-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/greenbone.js (start_auto_refresh): Add to gsa
	object and do not start auto-refresh as long a dashboard is in edit
	mode.
	(stop_auto_refresh): Add to gsa object.

	* src/html/classic/js/gsa_dashboard.js (Dashboard.prototype.startEdit):
	Stop the auto-refresh on starting edit mode.
	(Dashboard.prototype.stopEdit): Start the auto-refresh on stopping
	edit mode.

2016-09-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* CMakeLists.txt: Allow OPENVAS_RUN_DIR to be passed in.

2016-09-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (js-scan-management-top-visualization)
	(js-assets-top-visualization, js-secinfo-top-visualization)
	(js-notes-top-visualization, js-overrides-top-visualization): Add
	data-hide-filter-select attribute to dashboard definition divs to
	hide the filter drop-downs.

	* src/html/classic/omp.xsl (get_tasks_chart, get_aggregate)
	(get_assets_chart): Add data-hide-filter-select attribute to dashboard
	definition divs.

	* src/html/classic/js/gsa_dashboard.js
	(DashboardDisplay.prototype._updateFilters): Also include filters where